# a

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  STRATEGY_REPORT.md  app.py  cli.py  config.py  data_fetcher.py  demo.py  feature_engine.py  generate_gold_data.py  generate_synthetic_data.py  gold_topstep_strategy.pine  instruments.py  main.py  main_cbr.py  main_combined.py  main_multi.py  main_nq.py  main_orb.py  ml_strategy.py  optimize.py  prop_firm_sim.py  pyproject.toml  requirements.txt  run_optimizer.py  run_real_optimizer.py  run_v2.py  run_v3.py  strategy_results.json
agents/: 00-pipeline.md  01-data-fetcher.md  02-strategy-spec.md  03-backtester.md  04-analyst.md  05-reporter.md  06-proposer.md  07-walkforward.md  08-critic.md  09-orchestrator.md  10-auditor.md  11-fib-analyzer.md  12-skeptic.md  13-alpha-data-auditor.md  14-alpha-hypothesis-generator.md  15-alpha-spec-builder.md  16-alpha-backtest-runner.md  17-robustness-critic.md  18-refiner.md  19-portfolio-builder.md  20-targeted-refiner.md  21-alpha-judge.md  22-prop-rules-interpreter.md  23-pass-strategy-hunter.md  24-risk-sizing-optimiser.md  25-daily-lockout-optimiser.md  26-drawdown-survival-critic.md  27-payout-survival-analyst.md  28-prop-certifier.md  backtest_agent.md  data_agent.md  research_agent.md  walkforward_agent.md
analytics/: edge_decomp.py  session_mean.py  tpo.py  tpo_levels.py  trade_metrics.py
backtest/: engine.py  metrics.py  monte_carlo.py
config/: data_splits.json  dukascopy_symbols.json  global.yaml  instruments.yaml  prop_accounts.json
core/: candidate.py  (+7 more)
(+415 files in other folders)
