[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prop-backtest"
version = "0.1.0"
description = "Prop firm challenge backtesting engine with RL support"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.26",
    "rich>=13.0",
    "click>=8.1",
    "matplotlib>=3.8",
    "gymnasium>=0.29",
    "stable-baselines3[extra]>=2.3",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["prop_backtest*"]

[project.scripts]
prop-backtest = "cli:main"
