[project]
name = "propfirm-algo"
version = "0.1.0"
description = "Prop firm challenge trading algorithm for Topstep / MFF 50k accounts"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
